@@ -14,6 +14,8 @@ http://dev.openguides.org/log/trunk
         Made div#maincontent on the edit form wrap the preview view only, not
           the whole form.
         Added links to the "revision N" and "Last edited" text in the navbar.
+        Added format => "raw" option to OpenGuides::Search->run to let you get
+          your results back as a hash.
         Add JavaScript to the Create New Page page so the prefilled
           "New page name" disappears when you click in the field (it doesn't
           make anything other than "New page name" diappear).
